--- a/app/src/main/res/drawable/message_bubble_sender.xml
+++ b/app/src/main/res/drawable/message_bubble_sender.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#0288D1" /> <!-- Darker blue for current user's messages -->
+    <solid android:color="@color/button_color" /> <!-- Darker blue for current user's messages -->
     <corners android:radius="16dp" />
 </shape>
 
