--- a/app/src/main/res/layout/fragment_draft_room.xml
+++ b/app/src/main/res/layout/fragment_draft_room.xml
@@ -1,6 +1,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -14,7 +15,7 @@
         android:id="@+id/draftRoomTopBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
+        android:background="@color/button_color"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -30,8 +31,10 @@
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
             android:text="Exit"
-            android:textColor="@android:color/white"
-            android:textSize="18sp" />
+            android:textColor="@color/button_text_color"
+            android:textSize="18sp"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="8dp" />
     </androidx.appcompat.widget.Toolbar>
 
     <FrameLayout
@@ -49,7 +52,7 @@
         android:id="@+id/draftRoomBottomNav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
+        android:background="@color/button_color"
         app:menu="@menu/draft_room_bottom_nav"
         app:itemIconTint="@color/white"
         app:itemTextColor="@color/white"
