--- a/app/src/main/res/layout/fragment_edit_team_info.xml
+++ b/app/src/main/res/layout/fragment_edit_team_info.xml
@@ -11,26 +11,28 @@
         android:id="@+id/editTeamToolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
+        android:background="@color/button_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navigationIcon="@drawable/ic_arrow_back"
-        app:title="Edit Team Info" />
+        app:title="Edit Your Team"
+        app:titleTextColor="@color/button_text_color" />
 
 
     <!-- Main content scroll view -->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/editTeamToolbar"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:background="@color/background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/editTeamToolbar">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:gravity="center_horizontal"
+            android:orientation="vertical"
             android:padding="24dp">
 
             <!-- Team Profile Picture -->
@@ -50,11 +52,11 @@
                 android:id="@+id/teamNameTextViewLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Team Name:"
-                android:textSize="20sp"
-                android:textStyle="bold"
                 android:layout_marginBottom="8dp"
-                android:textColor="@color/black" />
+                android:text="Team Name:"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <!-- Team Name EditText -->
             <EditText
@@ -62,21 +64,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="24dp"
+                android:backgroundTint="@color/gray"
                 android:hint="Enter Team Name"
                 android:inputType="text"
-                android:textSize="18sp"
-                android:backgroundTint="@color/gray" />
+                android:textSize="18sp" />
 
             <!-- Profile Picture URL Label -->
             <TextView
                 android:id="@+id/profilePicUrlLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Profile Picture URL:"
-                android:textSize="20sp"
-                android:textStyle="bold"
                 android:layout_marginBottom="8dp"
-                android:textColor="@color/black" />
+                android:text="Profile Picture URL:"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <!-- Profile Picture URL EditText -->
             <EditText
@@ -84,22 +86,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="24dp"
+                android:backgroundTint="@color/gray"
                 android:hint="Enter URL"
                 android:inputType="textUri"
-                android:textSize="18sp"
-                android:backgroundTint="@color/gray" />
+                android:textSize="18sp" />
 
             <!-- Save Button -->
             <Button
                 android:id="@+id/saveTeamButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Save"
-                android:textAllCaps="false"
+                android:backgroundTint="@color/button_color"
                 android:paddingHorizontal="24dp"
                 android:paddingVertical="8dp"
-                android:backgroundTint="@color/purple_500"
-                android:textColor="@android:color/white" />
+                android:text="Save"
+                android:textAllCaps="false"
+                android:textColor="@color/button_text_color" />
 
         </LinearLayout>
     </ScrollView>
