--- a/app/src/main/res/layout/fragment_league_chat.xml
+++ b/app/src/main/res/layout/fragment_league_chat.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EEEEEE"
+    android:background="@color/button_color"
     android:paddingBottom="50dp"
     tools:context=".LeagueChatFragment">
 
@@ -15,10 +14,11 @@
         android:id="@+id/recycler_view_messages"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/background"
         app:layout_constraintBottom_toTopOf="@id/message_input_container"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Message input and send button area -->
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -27,21 +27,21 @@
         android:layout_height="wrap_content"
         android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <!-- Text input for message with rounded background -->
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editText_message"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Type your message"
             android:background="@drawable/rounded_edittext"
+            android:hint="Type your message"
             android:paddingEnd="48dp"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <!-- Send button positioned inside the EditText -->
         <ImageView
@@ -49,11 +49,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:padding="8dp"
             android:background="?attr/selectableItemBackgroundBorderless"
+            android:padding="8dp"
+            app:layout_constraintBottom_toBottomOf="@id/editText_message"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/editText_message"
-            app:layout_constraintBottom_toBottomOf="@id/editText_message"
             app:srcCompat="@drawable/ic_send" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
